.archived/kubernetes/selfhosted/xiaoya/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.noirprime.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: xiaoya-emby
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/icon: "https://avatars.githubusercontent.com/u/193775892?s=200&v=4"
    gethomepage.dev/name: xiaoya
    gethomepage.dev/group: Media
spec:
  hostnames: ["xiaoya.noirprime.com"]
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: xiaoya
          namespace: selfhosted-apps
          port: 2345
